fix(datepicker): remove date picker extra padding around fields

--- a/packages/components/src/DateTimePickers/shared/styles/mixins.scss
+++ b/packages/components/src/DateTimePickers/shared/styles/mixins.scss
@@ -61,5 +61,5 @@ $tc-datepicker-width: 19.375rem !default;
 @mixin arrow {
 	display: flex;
 	align-items: flex-end;
-	margin: tokens.$coral-spacing-s;
+	margin: 10px;
 }
